# Start

./: .cursorrules  .env.example  .gitignore  404.html  AGENTS.md  ActiveInferAnt_Stream_008.md  CONTRIBUTING.md  Code_of_Conduct.md  LICENSE  README.md  README_Spanish.md  ToDo.md  here.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  run.sh  run_docs.sh  sitemap.xml
.aii/: config.yaml
CONTRIBUTING/: index.html
FAQ/: index.html
ROADMAP/: index.html
TESTING/: index.html
clones/: index.html
configuration/: index.html
conventions/: index.html
data/: AGENTS.md  README.md
data_outputs/: index.html
docs/: AGENTS.md  CONTRIBUTING.md  FAQ.md  README.md  ROADMAP.md  TESTING.md  clones.md  configuration.md  conventions.md  data_outputs.md  docs_and_deployment.md  environment.md  examples.md  getting_started.md  index.md  learning_api_integration.md  learning_usage_guide.md  pipeline.md  translations.md  visualizations.md
docs_and_deployment/: index.html
environment/: index.html
examples/: AGENTS.md  README.md  index.html
getting_started/: index.html
learning/: AGENTS.md  README.md
other/: index.html
pipeline/: index.html
search/: search_index.json
src/: AGENTS.md  Makefile  README.md  __init__.py  setup.sh
tests/: AGENTS.md  README.md  conftest.py  fixtures.py  test_1_research_domain.py  test_2_write_introduction.py  test_3_introduction_visualizations.py  test_4_translate_introductions.py  test_clients.py  test_clone_repo.py  test_common_io.py  test_config.py  test_curriculum_scripts_integration.py  test_curriculum_sections.py  (+20 more)
(+1080 files in other folders)
